--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
           source .venv/bin/activate
 
           pip install --upgrade pip
+          pip install -r torch-requirements.txt
           pip install -r requirements.txt
+
 
           sudo systemctl restart yolo.service
