reporting code coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,13 @@ jobs:
     
     - name: Run tests
       run: python -m unittest discover -s tests -p "test_*.py"
+
+    - name: Run tests with coverage
+      run: |
+        pytest
+    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: true
